Add dom event example

--- a/html-css/grants-dog-walking/index.html
+++ b/html-css/grants-dog-walking/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-	<title>Grant's Dog Walking</title>
-</head>
-<body>
-	<header>
-		<h1>Grant's Dog Walking</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Grant's Dog Walking</title>
+  </head>
+  <body>
+    <header>
+      <h1>Grant's Dog Walking</h1>
 
-		<nav>
-			<a href="#"> Home</a>
-			<a href="#"> Prices</a>
-			<a href="#"> Contact Us</a>
-		</nav>
-	</header>
-</body>
+      <nav>
+        <a href="#"> Home</a>
+        <a href="#"> Prices</a>
+        <a href="#"> Contact Us</a>
+      </nav>
+    </header>
+
+    <main>
+      <p>
+        Doggo ipsum heck you are doing me a frighten very good spot noodle
+        horse, tungg. Very taste wow sub woofer doge I am bekom fat doggo, doing
+        me a frighten corgo very jealous pupper, heckin big ol pupper doggorino.
+        Shooberino wrinkler boofers noodle horse pupper pats boof doggo dat
+        tungg tho pupperino, pats waggy wags many pats tungg heckin good boys
+        adorable doggo blep smol. Many pats doing me a frighten long water shoob
+        shoob, length boy lotsa pats.
+      </p>
+
+      <button class="toggle-dark-mode">Dark Mode</button>
+    </main>
+
+    <script src="./script.js"></script>
+  </body>
 </html>
